<resources>
    <string name="app_name">SmartButler</string>
    <string name="butler">管家</string>
    <string name="function">功能</string>
    <string name="personal">我的</string>
    <string name="text_setting">设置</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="age">年龄</string>
    <string name="describe">简介</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="text_password_again">确认密码</string>
    <string name="email">邮箱</string>
    <string name="register_remind">注册成功需要前往邮箱验证，否则无法登录！</string>
    <string name="change_password">修改密码</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="text_now_login">正在登陆..</string>
    <string name="personal_center">个人中心</string>
    <string name="editing_materials">编辑资料</string>
    <string name="ack_change">确定修改</string>
    <string name="logistics_inquiry">物流查询</string>
    <string name="gender">性别</string>
    <string name="home_location_query">归属地查询</string>
    <string name="exit_login">退出登录</string>
    <string name="def_describe">这个人很懒，什么都没有</string>
    <string name="camera">拍照</string>
    <string name="picture">图库</string>
    <string name="cancel">取消</string>
    <string name="left">左边</string>
    <string name="right">右边</string>
    <string name="send">发送</string>
    <string name="express_inquiry">快递查询</string>
    <string name="express_company">快递公司</string>
    <string name="express_number">快递单号</string>
    <string name="query">查询</string>
    <string name="express_location_default">您的快件已经到达北京</string>
    <string name="beijing">北京</string>
    <string name="express_time_default">2021-04-01 12:00</string>
    <string name="need_phone_number">收件人/寄件人手机号（顺丰快递需要）</string>
    <string name="input_phone_number">输入电话号码</string>
    <string name="place_of_attribution">归属地</string>
    <string name="btn_one">1</string>
    <string name="btn_two">2</string>
    <string name="btn_three">3</string>
    <string name="btn_delete">del</string>
    <string name="btn_four">4</string>
    <string name="btn_five">5</string>
    <string name="btn_six">6</string>
    <string name="btn_zero">0</string>
    <string name="btn_seven">7</string>
    <string name="btn_eight">8</string>
    <string name="btn_nine">9</string>
    <string name="SMS_reminder">短信提醒</string>
    <string name="voice_announcements">语音播报</string>
    <string name="reply">回复</string>
    <string name="check_version">检测版本</string>
    <string name="new_version_updates">检测是否有新版本更新</string>
    <string name="scan">扫一扫</string>
    <string name="scan_QR_or_barcode">扫描二维码或条形码</string>
    <string name="my_QR_code">我的二维码</string>
    <string name="share_QR_code">把自己分享给朋友吧</string>
    <string name="my_location">我的位置</string>
    <string name="about_software">关于软件</string>
    <string name="concise">精练</string>
    <string name="smart">智能</string>
    <string name="strong">实用</string>
    <string name="input_morse">请输入摩尔斯电码字符串(只能输入字母、数字和空格)</string>
    <string name="click_bulb_to_light">点击电灯泡变亮</string>
    <string name="click_show_color_picker">点击屏幕显示调色板</string>
    <string name="brief_notes">简单记</string>
    <string name="edit">现在记...</string>
    <string name="month_out">本月支出</string>
    <string name="month_in">本月收入</string>
    <string name="budget">预算剩余</string>
    <string name="see_excel">查看图表分析</string>

    <string name="add_remark">添加备注</string>
    <string name="remark">备注</string>
    <string name="ensure">确认</string>
    <string name="please_input_time">输入时间(24小时制)</string>
    <string name="set_budget">设置预算</string>
    <string name="please_search_info">请输入搜索信息</string>
    <string name="data_empty">数据为空，无此类型数据！</string>
    <string name="history_record">历史账单</string>
    <string name="account_info">账单详情</string>
    <string name="history_info">本月账单记录</string>
    <string name="clear_all">清除所有账单</string>
    <string name="chart_info">账单详情</string>
    <string name="out">支出</string>
    <string name="in">收入</string>
    <string name="not_data">暂无数据</string>
</resources>
