<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@color/color_white">
    <TextView
        android:id="@+id/tv_dialog_remark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_remark"
        android:textSize="16sp"
        android:textColor="@color/color_black"/>
    <EditText
        android:id="@+id/et_dialog_remark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_dialog_remark"
        android:hint="@string/remark"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:textSize="14sp"
        android:background="@color/color_white">
        <requestFocus/>
    </EditText>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/et_dialog_remark"
        android:padding="10dp">
        <Button
            android:id="@+id/btn_dialog_remark_ensure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ensure"
            android:background="@drawable/button_enter_bg"
            android:textStyle="bold"
            android:textColor="@color/color_white"
            android:layout_marginRight="5dp"/>
        <Button
            android:id="@+id/btn_dialog_remark_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:background="@drawable/dialog_btn_frame"
            android:textStyle="bold"
            android:textColor="@color/color_blue"
            android:layout_marginRight="5dp"/>
    </LinearLayout>
</RelativeLayout>