<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="@color/gray_f3f3f3">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_dialog_more_record"
            style="@style/bookkeepingDialogMoreStyle"
            android:drawableTop="@mipmap/it_jilu"
            android:text="@string/history_record"/>
        <Button
            android:id="@+id/btn_dialog_more_info"
            style="@style/bookkeepingDialogMoreStyle"
            android:drawableTop="@mipmap/it_xiqing"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/account_info"/>
        <Button
            android:id="@+id/btn_dialog_more_setting"
            style="@style/bookkeepingDialogMoreStyle"
            android:drawableTop="@mipmap/it_shezhi"
            android:text="@string/text_setting"/>

    </LinearLayout>
    <ImageView
        android:id="@+id/iv_dialog_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ih_error"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>
</LinearLayout>