<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp">

    <ImageView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@mipmap/ic_launcher1"
        android:layout_marginBottom="10dp"
        android:focusableInTouchMode="true"/>
    <!--<de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@mipmap/ic_launcher1"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/color_white"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:background="@color/color_white">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/login_user"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"/>

        <com.yangyang.smartbutler.weight.ClearEditText
            android:id="@+id/et_login_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/username"
            android:background="@color/color_white"
            android:padding="15dp"
            android:focusable="true"
            android:focusableInTouchMode="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/color_white">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/login_pass"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"/>

        <com.yangyang.smartbutler.weight.ClearEditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"

            android:background="@color/color_white"/>
    </LinearLayout>




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        >

        <CheckBox
            android:id="@+id/cb_login_remember_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="记住密码"
            android:textColor="@color/colorAccent"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:id="@+id/tv_login_forget_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="忘记密码"
            android:textColor="@color/colorAccent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_enter_bg"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_enter_bg"
        android:text="@string/register"
        android:textColor="@android:color/white"
        />

</LinearLayout>